// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attack scenarios > big_plains equal 20k tiles each, 1M vs 1M, attack 200k 1`] = `
{
  "attackerLossPerSecond": 10810,
  "attackerLossPerTile": 168.1,
  "attackerTiles": 20000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 3216,
  "defenderLossPerTile": 50,
  "defenderTiles": 20000,
  "defenderTroopsLost": 59500,
  "finished": true,
  "ticks": 185,
  "tilesConquered": 1190,
  "tilesPerSecond": 64.32,
}
`;

exports[`attack scenarios > big_plains equal 20k tiles each, 200k vs 200k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 7407,
  "attackerLossPerTile": 118,
  "attackerTiles": 20000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 627.8,
  "defenderLossPerTile": 10,
  "defenderTiles": 20000,
  "defenderTroopsLost": 3390,
  "finished": true,
  "ticks": 54,
  "tilesConquered": 339,
  "tilesPerSecond": 62.78,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M troops all-in vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 112500,
  "attackerLossPerTile": 19.41,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 8000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 9017,
  "defenderLossPerTile": 1.555,
  "defenderTiles": 591663,
  "defenderTroopsLost": 641118,
  "finished": true,
  "ticks": 711,
  "tilesConquered": 412222,
  "tilesPerSecond": 5798,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M vs 8M troops, attack 2M 1`] = `
{
  "attackerLossPerSecond": 50130,
  "attackerLossPerTile": 62.26,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 2000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 10470,
  "defenderLossPerTile": 13,
  "defenderTiles": 591663,
  "defenderTroopsLost": 417612,
  "finished": true,
  "ticks": 399,
  "tilesConquered": 32124,
  "tilesPerSecond": 805.1,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 4M (10k/tile) 1`] = `
{
  "attackerLossPerSecond": 1053000,
  "attackerLossPerTile": 9756,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 2000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1112000,
  "defenderLossPerTile": 10310,
  "defenderTiles": 388,
  "defenderTroopsLost": 2113345,
  "finished": true,
  "ticks": 19,
  "tilesConquered": 205,
  "tilesPerSecond": 107.9,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 400k (1k/tile) 1`] = `
{
  "attackerLossPerSecond": 170600,
  "attackerLossPerTile": 263.8,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 102372,
  "defenderEliminated": true,
  "defenderLossPerSecond": 496600,
  "defenderLossPerTile": 767.9,
  "defenderTiles": 388,
  "defenderTroopsLost": 297931,
  "finished": true,
  "ticks": 6,
  "tilesConquered": 388,
  "tilesPerSecond": 646.7,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 1M troops all-in vs 1M-tile defender with 1M 1`] = `
{
  "attackerLossPerSecond": 17450,
  "attackerLossPerTile": 81.72,
  "attackerTiles": 388,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 38.73,
  "defenderLossPerTile": 0.1813,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 2219,
  "finished": true,
  "ticks": 573,
  "tilesConquered": 12237,
  "tilesPerSecond": 213.6,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 100k troops, attack 50k vs 1M-tile sparse defender with 1M 1`] = `
{
  "attackerLossPerSecond": 1629,
  "attackerLossPerTile": 65.1,
  "attackerTiles": 388,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 307,
  "tilesConquered": 768,
  "tilesPerSecond": 25.02,
}
`;

exports[`attack scenarios > giant 600k vs 1M tiles, 1M troops attack 500k vs 8M defender 1`] = `
{
  "attackerLossPerSecond": 14250,
  "attackerLossPerTile": 60.63,
  "attackerTiles": 591663,
  "attackerTroopsLost": 500000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1645,
  "defenderLossPerTile": 7,
  "defenderTiles": 1010406,
  "defenderTroopsLost": 57729,
  "finished": true,
  "ticks": 351,
  "tilesConquered": 8247,
  "tilesPerSecond": 235,
}
`;

exports[`attack scenarios > plains 1-troop attack vs 50k defender 1`] = `
{
  "attackerLossPerSecond": 3.333,
  "attackerLossPerTile": 1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1,
  "defenderEliminated": false,
  "defenderLossPerSecond": 33.33,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 10,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 10M-troop attack vs defender with 1 troop 1`] = `
{
  "attackerLossPerSecond": 139000,
  "attackerLossPerTile": 308.7,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1543425,
  "defenderEliminated": true,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 111,
  "tilesConquered": 5000,
  "tilesPerSecond": 450.5,
}
`;

exports[`attack scenarios > plains 50k attack vs defender with 0 troops 1`] = `
{
  "attackerLossPerSecond": 13160,
  "attackerLossPerTile": 27.96,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 38,
  "tilesConquered": 1788,
  "tilesPerSecond": 470.5,
}
`;

exports[`attack scenarios > plains 100-tile turtle, 1M troops: conquered outright after one tile 1`] = `
{
  "attackerLossPerSecond": 31580,
  "attackerLossPerTile": 63.15,
  "attackerTiles": 9900,
  "attackerTroopsLost": 6315,
  "defenderEliminated": true,
  "defenderLossPerSecond": 50000,
  "defenderLossPerTile": 100,
  "defenderTiles": 100,
  "defenderTroopsLost": 10000,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 100,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 100-troop attack vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 333.3,
  "attackerLossPerTile": 100,
  "attackerTiles": 5000,
  "attackerTroopsLost": 100,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 200,
  "defenderTiles": 5000,
  "defenderTroopsLost": 200,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 4M troops (10k/tile) under a defense post, attacked with 1M 1`] = `
{
  "attackerLossPerSecond": 555600,
  "attackerLossPerTile": 31250,
  "attackerTiles": 9600,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 177800,
  "defenderLossPerTile": 10000,
  "defenderTiles": 400,
  "defenderTroopsLost": 320000,
  "finished": true,
  "ticks": 18,
  "tilesConquered": 32,
  "tilesPerSecond": 17.78,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 400k troops (1k/tile), attacked with 400k 1`] = `
{
  "attackerLossPerSecond": 72060,
  "attackerLossPerTile": 198.2,
  "attackerTiles": 9600,
  "attackerTroopsLost": 79261,
  "defenderEliminated": true,
  "defenderLossPerSecond": 273600,
  "defenderLossPerTile": 752.5,
  "defenderTiles": 400,
  "defenderTroopsLost": 301000,
  "finished": true,
  "ticks": 11,
  "tilesConquered": 400,
  "tilesPerSecond": 363.6,
}
`;

exports[`attack scenarios > plains big attacker (9500 tiles) vs small defender (500 tiles) 1`] = `
{
  "attackerLossPerSecond": 6667,
  "attackerLossPerTile": 181.8,
  "attackerTiles": 9500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 3667,
  "defenderLossPerTile": 100,
  "defenderTiles": 500,
  "defenderTroopsLost": 5500,
  "finished": true,
  "ticks": 15,
  "tilesConquered": 55,
  "tilesPerSecond": 36.67,
}
`;

exports[`attack scenarios > plains bot vs human defender 1`] = `
{
  "attackerLossPerSecond": 4000,
  "attackerLossPerTile": 94.34,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 424,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1060,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 106,
  "tilesPerSecond": 42.4,
}
`;

exports[`attack scenarios > plains bot vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 434.8,
  "attackerLossPerTile": 8.475,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 46,
  "tilesConquered": 236,
  "tilesPerSecond": 51.3,
}
`;

exports[`attack scenarios > plains defender with defense posts covering the whole border 1`] = `
{
  "attackerLossPerSecond": 7692,
  "attackerLossPerTile": 454.5,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 169.2,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 220,
  "finished": true,
  "ticks": 13,
  "tilesConquered": 22,
  "tilesPerSecond": 16.92,
}
`;

exports[`attack scenarios > plains defender with one defense post at the border 1`] = `
{
  "attackerLossPerSecond": 7143,
  "attackerLossPerTile": 277.8,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 257.1,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 360,
  "finished": true,
  "ticks": 14,
  "tilesConquered": 36,
  "tilesPerSecond": 25.71,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 20370,
  "attackerLossPerTile": 45.23,
  "attackerTiles": 5000,
  "attackerTroopsLost": 226157,
  "defenderEliminated": true,
  "defenderLossPerSecond": 17660,
  "defenderLossPerTile": 39.21,
  "defenderTiles": 5000,
  "defenderTroopsLost": 196040,
  "finished": true,
  "ticks": 111,
  "tilesConquered": 5000,
  "tilesPerSecond": 450.5,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 6098,
  "attackerLossPerTile": 119.6,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2039,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 16720,
  "finished": true,
  "ticks": 82,
  "tilesConquered": 418,
  "tilesPerSecond": 50.98,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 16530,
  "attackerLossPerTile": 92.25,
  "attackerTiles": 5000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 7167,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 86720,
  "finished": true,
  "ticks": 121,
  "tilesConquered": 2168,
  "tilesPerSecond": 179.2,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 13040,
  "attackerLossPerTile": 112.2,
  "attackerTiles": 5000,
  "attackerTroopsLost": 150000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4650,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 53480,
  "finished": true,
  "ticks": 115,
  "tilesConquered": 1337,
  "tilesPerSecond": 116.3,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 10k 1`] = `
{
  "attackerLossPerSecond": 4000,
  "attackerLossPerTile": 94.34,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 424,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1060,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 106,
  "tilesPerSecond": 42.4,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 25k 1`] = `
{
  "attackerLossPerSecond": 6944,
  "attackerLossPerTile": 95.06,
  "attackerTiles": 5000,
  "attackerTroopsLost": 25000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 730.6,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2630,
  "finished": true,
  "ticks": 36,
  "tilesConquered": 263,
  "tilesPerSecond": 73.06,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 50k (all-in) 1`] = `
{
  "attackerLossPerSecond": 10870,
  "attackerLossPerTile": 75.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1437,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 6610,
  "finished": true,
  "ticks": 46,
  "tilesConquered": 661,
  "tilesPerSecond": 143.7,
}
`;

exports[`attack scenarios > plains human vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2857,
  "attackerLossPerTile": 66.23,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 431.4,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1510,
  "finished": true,
  "ticks": 35,
  "tilesConquered": 151,
  "tilesPerSecond": 43.14,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 800,
  "attackerLossPerTile": 16.81,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 119,
  "tilesPerSecond": 47.6,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 3636,
  "attackerLossPerTile": 17.42,
  "attackerTiles": 1000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 55,
  "tilesConquered": 1148,
  "tilesPerSecond": 208.7,
}
`;

exports[`attack scenarios > plains nation vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2857,
  "attackerLossPerTile": 66.23,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 431.4,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1510,
  "finished": true,
  "ticks": 35,
  "tilesConquered": 151,
  "tilesPerSecond": 43.14,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 4k 1`] = `
{
  "attackerLossPerSecond": 1481,
  "attackerLossPerTile": 114.3,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 518.5,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1400,
  "finished": true,
  "ticks": 27,
  "tilesConquered": 35,
  "tilesPerSecond": 12.96,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 20k (all-in) 1`] = `
{
  "attackerLossPerSecond": 3774,
  "attackerLossPerTile": 117,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1291,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 6840,
  "finished": true,
  "ticks": 53,
  "tilesConquered": 171,
  "tilesPerSecond": 32.26,
}
`;

exports[`attack scenarios > plains overwhelming 200k vs 20k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 12120,
  "attackerLossPerTile": 41.71,
  "attackerTiles": 5000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1162,
  "defenderLossPerTile": 4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3836,
  "finished": true,
  "ticks": 33,
  "tilesConquered": 959,
  "tilesPerSecond": 290.6,
}
`;

exports[`attack scenarios > plains small attacker (500 tiles) vs big defender (9500 tiles) 1`] = `
{
  "attackerLossPerSecond": 3846,
  "attackerLossPerTile": 80.65,
  "attackerTiles": 500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 238.5,
  "defenderLossPerTile": 5,
  "defenderTiles": 9500,
  "defenderTroopsLost": 620,
  "finished": true,
  "ticks": 26,
  "tilesConquered": 124,
  "tilesPerSecond": 47.69,
}
`;

exports[`attack scenarios > plains supply: capital on the front line, attack 25k 1`] = `
{
  "attackerLossPerSecond": 6757,
  "attackerLossPerTile": 83.33,
  "attackerTiles": 5000,
  "attackerTroopsLost": 25000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 810.8,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3000,
  "finished": true,
  "ticks": 37,
  "tilesConquered": 300,
  "tilesPerSecond": 81.08,
}
`;

exports[`attack scenarios > plains supply: no capital at all, attack 25k 1`] = `
{
  "attackerLossPerSecond": 7353,
  "attackerLossPerTile": 122.5,
  "attackerTiles": 5000,
  "attackerTroopsLost": 25000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 600,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2040,
  "finished": true,
  "ticks": 34,
  "tilesConquered": 204,
  "tilesPerSecond": 60,
}
`;

exports[`attack scenarios > plains traitor defender 1`] = `
{
  "attackerLossPerSecond": 2500,
  "attackerLossPerTile": 47.62,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 525,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2100,
  "finished": true,
  "ticks": 40,
  "tilesConquered": 210,
  "tilesPerSecond": 52.5,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 39070,
  "attackerLossPerTile": 86.73,
  "attackerTiles": 5000,
  "attackerTroopsLost": 433631,
  "defenderEliminated": true,
  "defenderLossPerSecond": 57400,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 111,
  "tilesConquered": 5000,
  "tilesPerSecond": 450.5,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 9969,
  "attackerLossPerTile": 194.4,
  "attackerTiles": 5000,
  "attackerTroopsLost": 162500,
  "defenderEliminated": false,
  "defenderLossPerSecond": 6667,
  "defenderLossPerTile": 130,
  "defenderTiles": 5000,
  "defenderTroopsLost": 108680,
  "finished": true,
  "ticks": 163,
  "tilesConquered": 836,
  "tilesPerSecond": 51.29,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 39800,
  "attackerLossPerTile": 93.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 465644,
  "defenderEliminated": true,
  "defenderLossPerSecond": 54460,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 117,
  "tilesConquered": 5000,
  "tilesPerSecond": 427.4,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 25000,
  "attackerLossPerTile": 182.4,
  "attackerTiles": 5000,
  "attackerTroopsLost": 487500,
  "defenderEliminated": false,
  "defenderLossPerSecond": 17810,
  "defenderLossPerTile": 130,
  "defenderTiles": 5000,
  "defenderTroopsLost": 347360,
  "finished": true,
  "ticks": 195,
  "tilesConquered": 2672,
  "tilesPerSecond": 137,
}
`;

exports[`attack scenarios > world highland/mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4878,
  "attackerLossPerTile": 137,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 712.2,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2920,
  "finished": true,
  "ticks": 41,
  "tilesConquered": 146,
  "tilesPerSecond": 35.61,
}
`;

exports[`attack scenarios > world huge empires (~150k tiles each), 2M vs 2M, attack 400k 1`] = `
{
  "attackerLossPerSecond": 14080,
  "attackerLossPerTile": 157.1,
  "attackerTiles": 108968,
  "attackerTroopsLost": 400000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1434,
  "defenderLossPerTile": 16,
  "defenderTiles": 121741,
  "defenderTroopsLost": 40736,
  "finished": true,
  "ticks": 284,
  "tilesConquered": 2546,
  "tilesPerSecond": 89.65,
}
`;

exports[`attack scenarios > world mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4762,
  "attackerLossPerTile": 142.9,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2800,
  "finished": true,
  "ticks": 42,
  "tilesConquered": 140,
  "tilesPerSecond": 33.33,
}
`;

exports[`attack scenarios > world mountain region, human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 12500,
  "attackerLossPerTile": 26.63,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 16,
  "tilesConquered": 751,
  "tilesPerSecond": 469.4,
}
`;

exports[`attack scenarios > world plains-ish region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4545,
  "attackerLossPerTile": 109.9,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 827.3,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3640,
  "finished": true,
  "ticks": 44,
  "tilesConquered": 182,
  "tilesPerSecond": 41.36,
}
`;
